[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/RoleScene.gd" type="Script" id=1]
[ext_resource path="res://basic_theme.tres" type="Theme" id=2]

[node name="RoleScene" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="Center" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="PanelContainer" parent="CanvasLayer/Control/Center"]
margin_left = 372.0
margin_top = 233.0
margin_right = 651.0
margin_bottom = 367.0

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Control/Center/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 272.0
margin_bottom = 127.0

[node name="Label" type="Label" parent="CanvasLayer/Control/Center/Panel/VBox"]
margin_right = 265.0
margin_bottom = 33.0
theme_type_variation = "LargeLabel"
text = "Welcome to SubLine"

[node name="DomButton" type="Button" parent="CanvasLayer/Control/Center/Panel/VBox"]
margin_top = 37.0
margin_right = 265.0
margin_bottom = 62.0
text = "I am a Dominant"

[node name="SubButton" type="Button" parent="CanvasLayer/Control/Center/Panel/VBox"]
margin_top = 66.0
margin_right = 265.0
margin_bottom = 91.0
text = "I am a submissive"

[node name="OptButton" type="Button" parent="CanvasLayer/Control/Center/Panel/VBox"]
margin_top = 95.0
margin_right = 265.0
margin_bottom = 120.0
text = "Options"
